--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js --open --mode=development",
-    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --open --open --mode=production"
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --mode=production",
+    "debugStart": "cross-env NODE_ENV=development node --inspect-brk ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./config/webpack.config.js --open --mode=development",
+    "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production"
   },
   "author": "",
   "license": "ISC",
@@ -23,14 +25,17 @@
     "css-loader": "^6.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "install": "^0.13.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.6.0",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "style-loader": "^3.1.0",
     "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.45.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.2"
@@ -39,6 +44,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "react-dev-utils": "^12.0.0",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "webpack-merge": "^5.8.0"
