--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "devDependencies": {
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.26.1",
+    "babel-plugin-import": "^1.13.3",
     "react-dev-utils": "^12.0.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
