--- a/package.json
+++ b/package.json
@@ -7,33 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js --open --mode=development",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --mode=production",
+    "lint": "eslint --ext .tsx,.ts,.js,.jsx src/",
     "debugStart": "cross-env NODE_ENV=development node --inspect-brk ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./config/webpack.config.js --open --mode=development",
     "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
     "antd": "^4.19.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "cross-env": "^7.0.3",
     "css-loader": "^6.1.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
     "install": "^0.13.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "mini-css-extract-plugin": "^2.6.0",
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "style-loader": "^3.1.0",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.45.1",
@@ -41,14 +33,28 @@
     "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
     "axios": "^0.26.1",
     "babel-plugin-import": "^1.13.3",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.11.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "mini-css-extract-plugin": "^2.6.0",
     "react-dev-utils": "^12.0.0",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "webpack-merge": "^5.8.0"
   }
 }
