--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,21 @@
-{ "typescript.tsdk": "node_modules/typescript/lib", "typescript.enablePromptUseWorkspaceTsdk": true }
+{
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true,
+    //.vue文件template格式化支持，并使用js-beautify-html插件
+    "vetur.format.defaultFormatter.html": "js-beautify-html",
+    //js-beautify-html格式化配置，属性强制换行
+    "vetur.format.defaultFormatterOptions": {
+        "js-beautify-html": {
+            "wrap_attributes": "force-aligned"
+        }
+    },
+    //配置 ESLint 检查的文件类型
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact"
+    ],
+    //保存时eslint自动修复错误
+    "eslint.autoFixOnSave": true,
+    //保存自动格式化
+    "editor.formatOnSave": true
+}
