--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js --open --mode=development",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --mode=production",
-    "lint": "eslint --ext .tsx,.ts,.js,.jsx src/",
+    "lint": "eslint --ext .tsx,.ts,.js,.jsx --fix src/",
     "debugStart": "cross-env NODE_ENV=development node --inspect-brk ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./config/webpack.config.js --open --mode=development",
-    "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production"
+    "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,tsx,ts,jsx}": [
+      "npm run lint",
+      "git add ."
+    ]
+  },
   "dependencies": {
     "antd": "^4.19.3",
     "babel-loader": "^8.2.2",
@@ -46,9 +59,12 @@
     "babel-plugin-import": "^1.13.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "mini-css-extract-plugin": "^2.6.0",
     "react-dev-utils": "^12.0.0",
     "resolve-url-loader": "^5.0.0",
