feat: 添加eslint，prettier，husky，lint-staged

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,6 @@
   "semi": false,
   "tabWidth": 2,
   "trailingComma": "none",
-  "singleQuote": false,
+  "singleQuote": true,
   "arrowParens": "avoid"
 }
