--- a/package.json
+++ b/package.json
@@ -10,42 +10,12 @@
     "lint": "eslint --ext .tsx,.ts,.js,.jsx --fix src/",
     "debugStart": "cross-env NODE_ENV=development node --inspect-brk ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./config/webpack.config.js --open --mode=development",
     "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "author": "",
   "license": "ISC",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,tsx,ts,jsx}": [
-      "npm run lint",
-      "git add ."
-    ]
-  },
   "dependencies": {
-    "antd": "^4.19.3",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^6.1.0",
-    "file-loader": "^6.2.0",
-    "install": "^0.13.0",
-    "less": "^4.1.1",
-    "less-loader": "^10.0.1",
-    "npm": "^8.5.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "typescript": "^4.3.5",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "webpack": "^5.45.1",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "^3.11.2"
-  },
-  "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.14.7",
@@ -55,22 +25,47 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "antd": "^4.19.3",
     "axios": "^0.26.1",
+    "babel-loader": "^8.2.4",
     "babel-plugin-import": "^1.13.3",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "lint-staged": "^12.3.7",
     "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.1",
+    "react": "^17.0.2",
     "react-dev-utils": "^12.0.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "webpack-merge": "^5.8.0"
+    "typescript": "^4.6.3",
+    "typescript-plugin-css-modules": "^3.4.0",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0",
+    "@commitlint/config-conventional": "^16.2.1",
+    "commitizen": "^4.2.4",
+    "commitlint": "^16.2.3",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
