--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
         "javascriptreact"
     ],
     //保存时eslint自动修复错误
-    "eslint.autoFixOnSave": false,
+    "eslint.autoFixOnSave": true,
     //保存自动格式化
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
 }
