--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -30,8 +31,13 @@
     "babel-loader": "^8.2.4",
     "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^4.0.0",
+    "commitizen": "^4.2.4",
+    "commitlint": "^16.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -57,11 +63,7 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0",
-    "@commitlint/config-conventional": "^16.2.1",
-    "commitizen": "^4.2.4",
-    "commitlint": "^16.2.3",
-    "cz-conventional-changelog": "^3.3.0"
+    "webpack-merge": "^5.8.0"
   },
   "config": {
     "commitizen": {
