--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@commitlint/config-conventional": "^16.2.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
@@ -33,11 +34,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.3",
+    "compression-webpack-plugin": "^9.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.0",
+    "esbuild-loader": "^2.18.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -61,9 +64,11 @@
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2"
   },
   "config": {
     "commitizen": {
