--- a/config/env/.env.development
+++ b/config/env/.env.development
@@ -1,6 +1,4 @@
-# 打包中检测出eslint问题，是否作为error提示
-ESLINT_NO_DEV_ERRORS = true 
-# 是否生成source-map
-GENERATE_SOURCEMAP = true
-# 是否禁用webpack的eslint插件
-ESLINT_DISABLE = false 
+ESLINT_NO_DEV_ERRORS = false  # 打包中检测出eslint问题，是否作为error提示
+GENERATE_SOURCEMAP = true # 是否生成source-map
+ESLINT_DISABLE = false  # 是否禁用webpack的eslint插件
+DEV_SERVER_PORT = 8020 # 配置的端口
