--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,14 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+			"@babel/preset-env",
+			{
+				"modules": "auto",
+				"loose": true,
+				"useBuiltIns": "usage",
+				"corejs": { "version": "3.21.1", "proposals": true }
+			}
+		],
     "@babel/preset-react",
     [
       "@babel/preset-typescript",
