--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.config.js --mode=development",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js --mode=production",
     "lint": "eslint --ext .tsx,.ts,.js,.jsx --fix src/",
@@ -21,21 +21,26 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/config-conventional": "^16.2.1",
     "@reduxjs/toolkit": "^1.8.0",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.4",
     "babel-plugin-import": "^1.13.3",
+    "babel-preset-react-app": "^10.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.3",
     "compression-webpack-plugin": "^9.2.0",
+    "core-js": "^3.21.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
@@ -50,12 +55,16 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.5.1",
+    "jest-watch-typeahead": "^1.0.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lint-staged": "^12.3.7",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.1",
     "react": "^17.0.2",
+    "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -78,5 +87,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "msw": "^0.39.2"
   }
 }
