feat: 实现微前端，自动化集成CI/CD

--- a/config/env/.env.production
+++ b/config/env/.env.production
@@ -1,3 +1,5 @@
 ESLINT_NO_DEV_ERRORS = true  # 打包中检测出eslint问题，是否作为error提示
 GENERATE_SOURCEMAP = true  # 是否生成source-map
 ESLINT_DISABLE = false # 是否禁用webpack的eslint插件
+APP_SUB_VUE = //localhost:7777/subapp/sub-vue/ 
+APP_SUB_REACT = //localhost:7766/subapp/sub-react/
