--- a/config/env/.env.development
+++ b/config/env/.env.development
@@ -2,3 +2,6 @@ ESLINT_NO_DEV_ERRORS = false  # 打包中检测出eslint问题，是否作为err
 GENERATE_SOURCEMAP = true # 是否生成source-map
 ESLINT_DISABLE = false  # 是否禁用webpack的eslint插件
 DEV_SERVER_PORT = 8020 # 配置的端口
+shouldUseReactRefresh = true # 热更新
+APP_SUB_VUE = //localhost:7777/subapp/sub-vue/ 
+APP_SUB_REACT = //localhost:7766/subapp/sub-react/
