--- a/package.json
+++ b/package.json
@@ -11,7 +11,20 @@
     "debugStart": "cross-env NODE_ENV=development node --inspect-brk ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config ./config/webpack.config.js --mode=development",
     "debugBuild": "cross-env NODE_ENV=production node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode=production",
     "prepareHusky": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "gitPullAll": "git pull && git pull gitee",
+    "gitPushAll": "git push && git push gitee",
+    "startAll": "npm-run-all --parallel startQ:*",
+    "startQ:main": "npm start",
+    "startQ:sub-vue": "cd subApps/sub-vue && npm start",
+    "startQ:sub-react": "cd subApps/sub-react && npm start",
+    "buildAll": "cross-env BUNDLE_NO_ANALZER=true yarn build && npm-run-all --parallel buildQ:*",
+    "buildQ:sub-react": "cd subApps/sub-react && npm run build && mkdir -p ../../build/subapp/sub-react && cp -r ./build/* ../../build/subapp/sub-react/",
+    "buildQ:sub-vue": "cd subApps/sub-vue && npm run build && mkdir -p ../../build/subapp/sub-vue && cp -r ./dist/* ../../build/subapp/sub-vue/",
+    "installAll": "npm-run-all --serial installQ:*",
+    "installQ:main": "yarn",
+    "installQ:sub-vue": "cd subApps/sub-vue && yarn",
+    "installQ:sub-react": "cd subApps/sub-react && yarn"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +36,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/config-conventional": "^16.2.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -53,6 +67,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "fs-extra": "^10.0.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
@@ -61,14 +76,20 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lint-staged": "^12.3.7",
+    "lodash": "^4.17.21",
+    "lodash.union": "^4.6.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.1",
+    "process": "^0.11.10",
+    "qiankun": "^2.7.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
+    "recursive-readdir-sync": "^1.0.6",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
