--- a/.eslintrc
+++ b/.eslintrc
@@ -13,24 +13,13 @@
   ],
   "rules": {
     "no-use-before-define": "off",
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ],
+    "object-curly-spacing": ["error", "always"],
     "padding-line-between-statements": [
       "error",
       {
         "blankLine": "any",
-        "prev": [
-          "const",
-          "let",
-          "var"
-        ],
-        "next": [
-          "const",
-          "let",
-          "var"
-        ]
+        "prev": ["const", "let", "var"],
+        "next": ["const", "let", "var"]
       }
     ],
     "no-multiple-empty-lines": [
@@ -39,10 +28,7 @@
         "max": 1
       }
     ],
-    "space-in-parens": [
-      "error",
-      "never"
-    ],
+    "space-in-parens": ["error", "never"],
     "space-before-function-paren": "off",
     "keyword-spacing": [
       "error",
